# ai-inbox-triage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo_output/: report.html  results.json
inbox_triage/: __init__.py  cli.py  report.py  triage.py
inbox_triage/providers/: __init__.py  anthropic_provider.py  base.py  claude_cli.py  mock.py
sample_data/: emails.csv
tests/: test_mock_pipeline.py
